--- a/app/src/main/res/layout/fragment_join.xml
+++ b/app/src/main/res/layout/fragment_join.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/iv_logo"
         android:layout_width="0dp"
-        android:layout_height="180dp"
+        android:layout_height="@dimen/icon_extra_large"
         android:src="@drawable/logo"
         app:layout_constraintBottom_toTopOf="@id/til_id"
         app:layout_constraintEnd_toEndOf="parent"
