--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,10 +7,14 @@
     <dimen name="padding_extra_large">32dp</dimen>
     <dimen name="padding_extra_extra_large">48dp</dimen>
 
+    <dimen name="dialog_padding_medium">40dp</dimen>
+
     <!-- EditText -->
     <dimen name="ti_height">60dp</dimen>
 
     <!-- Icon -->
     <dimen name="icon_small">48dp</dimen>
-    <dimen name="icon_size">100dp</dimen>
+    <dimen name="icon_large">100dp</dimen>
+    <dimen name="icon_extra_large">150dp</dimen>
+    <dimen name="icon_extra_extra_large">300dp</dimen>
 </resources>
