--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,16 @@
         <item name="android:ellipsize">end</item>
     </style>
 
+    <style name="BoldLargeText">
+        <item name="android:textSize">25sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="commonText">
+        <item name="android:textSize">17sp</item>
+    </style>
+
+
     <style name="boxCornerRadiusStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">@dimen/ti_height</item>
