S11P12D210-37 Refactor: 변수명 변경

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="gray_10">#CCCCCC</color>
     <color name="gray_20">#999999</color>
     <color name="gray_30">#808080</color>
-    <color name="lightGreen">#F8FEFA</color>
+    <color name="light_green">#F8FEFA</color>
 </resources>
