--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,6 +16,7 @@
     <dimen name="ti_height">60dp</dimen>
 
     <!-- Icon -->
+    <dimen name="icon_extra_small">24dp</dimen>
     <dimen name="icon_small">48dp</dimen>
     <dimen name="icon_large">100dp</dimen>
     <dimen name="icon_extra_large">150dp</dimen>
