--- a/app/src/main/res/layout/list_item_lecture_thumbnail.xml
+++ b/app/src/main/res/layout/list_item_lecture_thumbnail.xml
@@ -32,8 +32,8 @@
         <!-- TODO 상황에 따라 흰색, 검은색 설정하기 -->
         <ImageView
             android:id="@+id/iv_favorite"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="@dimen/icon_extra_small"
+            android:layout_height="@dimen/icon_extra_small"
             android:layout_marginTop="@dimen/padding_small"
             android:layout_marginEnd="@dimen/padding_small"
             android:src="@drawable/favorite"
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:maxLength="4"
             android:text="0"
-            android:textSize="16sp"
+            style="@style/commonText"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@id/iv_favorite"
             app:layout_constraintStart_toStartOf="@id/iv_favorite"
@@ -55,12 +55,11 @@
 
         <TextView
             android:id="@+id/tv_title"
-            style="@style/SingleLineText"
+            style="@style/commonText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/padding_small"
             android:gravity="center"
-            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@id/cv_content"
             app:layout_constraintEnd_toEndOf="@id/cv_content"
             app:layout_constraintStart_toStartOf="@id/cv_content"
