--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,8 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="colorPrimary">@color/primary</item>
+        <item name="colorSurfaceContainer">@color/surface_container</item>
+        <item name="colorSecondaryContainer">@color/second_primary</item>
     </style>
 
     <style name="Theme.YogaNavi" parent="Base.Theme.YogaNavi" />
