S11P12D210-6 refactor textview 텍스트 tools로 정리

--- a/app/src/main/res/layout/dialog_enter.xml
+++ b/app/src/main/res/layout/dialog_enter.xml
@@ -21,7 +21,7 @@
         android:id="@+id/tv_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        tools:text="TextView"
         android:gravity="center"
         android:paddingHorizontal="@dimen/padding_extra_large"
         style="@style/BoldLargeText"
@@ -34,7 +34,7 @@
         android:id="@+id/tv_teacher"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        tools:text="TextView"
         android:gravity="center"
         style="@style/commonText"
         android:paddingHorizontal="@dimen/padding_extra_large"
@@ -48,7 +48,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:paddingHorizontal="@dimen/padding_extra_large"
-        android:text="TextView"
+        tools:text="TextView"
         style="@style/commonText"
         android:layout_margin="@dimen/padding_small"
         app:layout_constraintEnd_toEndOf="parent"
