--- a/app/src/main/res/layout/fragment_lecture_detail.xml
+++ b/app/src/main/res/layout/fragment_lecture_detail.xml
@@ -43,7 +43,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="start"
-                android:text="TextView"
+                tools:text="TextView"
                 android:paddingHorizontal="@dimen/padding_medium"
                 android:paddingBottom="@dimen/padding_medium"
                 style="@style/commonText"
@@ -85,7 +85,7 @@
                 android:id="@+id/tv_content_three_line"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                tools:text="TextView"
                 android:gravity="start"
                 android:paddingBottom="@dimen/padding_medium"
                 android:paddingHorizontal="@dimen/padding_medium"
