--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,4 +24,10 @@
     <dimen name="icon_little_large">120dp</dimen>
     <dimen name="icon_extra_large">150dp</dimen>
     <dimen name="icon_extra_extra_large">300dp</dimen>
+
+    <!-- TextSize -->
+    <dimen name="text_medium">16sp</dimen>
+    <dimen name="text_medium_large">18sp</dimen>
+    <dimen name="text_large">24sp</dimen>
+    <dimen name="text_extra_large">36sp</dimen>
 </resources>
