--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="SingleLineText">
         <item name="android:singleLine">true</item>
         <item name="android:ellipsize">end</item>
@@ -40,5 +41,13 @@
         <item name="android:paddingStart">@dimen/padding_large</item>
         <item name="android:paddingTop">@dimen/padding_medium</item>
         <item name="android:paddingBottom">@dimen/padding_medium</item>
+    </style>
+
+    <style name="week_button">
+        <item name="android:background">@drawable/round_button_background</item>
+        <item name="android:scaleType">fitCenter</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">2sp</item>
+        <item name="layout_constraintDimensionRatio">1:1</item>
     </style>
 </resources>
