--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#FEC3BB</color>
-    <color name="gray_10">#CCCCCC</color>
+    <color name="gray_10">#dcdcdc</color>
     <color name="gray_20">#999999</color>
     <color name="gray_30">#808080</color>
     <color name="light_green">#F8FEFA</color>
