--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,17 @@
         <item name="android:textSize">17sp</item>
     </style>
 
+    <style name="WeeklyButton">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:background">@drawable/round_button_background</item>
+        <item name="android:gravity">center</item>
+        <item name="layout_constraintDimensionRatio">1:1</item>
+        <item name="layout_constraintWidth_percent">0.12</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:button">@null</item>
+    </style>
 
     <style name="boxCornerRadiusStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="android:layout_width">0dp</item>
