--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- 간격 -->
+    <dimen name="padding_extra_extra_small">2dp</dimen>
     <dimen name="padding_extra_small">4dp</dimen>
     <dimen name="padding_small">8dp</dimen>
     <dimen name="padding_medium">16dp</dimen>
@@ -13,12 +14,14 @@
 
 
     <!-- EditText -->
+    <dimen name="ti_extra_large_width">300dp</dimen>
     <dimen name="ti_height">60dp</dimen>
 
     <!-- Icon -->
     <dimen name="icon_mini">32dp</dimen>
     <dimen name="icon_extra_small">24dp</dimen>
     <dimen name="icon_small">30dp</dimen>
+    <dimen name="icon_little_medium">36dp</dimen>
     <dimen name="icon_medium">48dp</dimen>
     <dimen name="icon_large">100dp</dimen>
     <dimen name="icon_little_large">120dp</dimen>
