--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,10 +44,13 @@
     </style>
 
     <style name="week_button">
-        <item name="android:background">@drawable/round_button_background</item>
-        <item name="android:scaleType">fitCenter</item>
+        <item name="android:gravity">center</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">2sp</item>
+        <item name="android:textSize">@dimen/text_medium</item>
+        <item name="android:button">@null</item>
+        <item name="android:layout_width">0dp</item>
         <item name="layout_constraintDimensionRatio">1:1</item>
+        <item name="android:layout_height">@dimen/icon_little_medium</item>
+        <item name="android:layout_margin">@dimen/padding_extra_extra_small</item>
     </style>
 </resources>
