--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,10 @@
         <item name="android:textSize">17sp</item>
     </style>
 
+    <style name="LargeText">
+        <item name="android:textSize">22sp</item>
+    </style>
+
     <style name="WeeklyButton">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">0dp</item>
