S11P12D210-23 refactory : 요일 선택 중복되는 코드 제거

--- a/app/src/main/res/drawable/toggle_button_background.xml
+++ b/app/src/main/res/drawable/toggle_button_background.xml
@@ -7,7 +7,7 @@
     </item>
     <item>
         <shape android:shape="oval">
-            <solid android:color="@android:color/transparent"/>
+            <solid android:color="@color/gray_10"/>
         </shape>
     </item>
 </selector>
