--- a/app/src/main/res/layout/fragment_register_notice.xml
+++ b/app/src/main/res/layout/fragment_register_notice.xml
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@null"
-        android:hint="글을 작성하는 공간입니다."
+        android:hint="@string/write_info"
         android:inputType="text"
         style="@style/LargeText"
         android:padding="@dimen/padding_large"
@@ -27,90 +27,48 @@
         android:id="@+id/divider4"
         android:layout_width="0dp"
         android:layout_height="1dp"
+        android:layout_marginHorizontal="@dimen/padding_large"
         android:background="?android:attr/listDivider"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_notice"
-        app:layout_constraintBottom_toTopOf="@id/cv_add_photo"
-        />
+        app:layout_constraintTop_toBottomOf="@id/et_notice" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cv_add_photo"
-        android:layout_width="0dp"
+
+    <TextView
+        android:id="@+id/tv_add_photo"
+        style="@style/LargeText"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/divider4"
+        android:paddingVertical="@dimen/padding_medium"
+        android:text="@string/add_photo"
+        app:drawableStartCompat="@drawable/photo_camera"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/divider4" />
 
-        <Space
-            android:id="@+id/s1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/iv_camera"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
-        <ImageView
-            android:id="@+id/iv_camera"
-            android:layout_width="@dimen/icon_small"
-            android:layout_height="@dimen/icon_small"
-            android:src="@drawable/photo_camera"
-            android:layout_marginVertical="@dimen/padding_medium"
-            android:layout_marginEnd="@dimen/padding_small"
-            app:layout_constraintStart_toEndOf="@id/s1"
-            app:layout_constraintEnd_toStartOf="@id/tv_add_photo"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
+    <ImageView
+        android:id="@+id/iv_photo"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/padding_medium"
+        android:adjustViewBounds="true"
+        android:scaleType="centerInside"
+        android:src="@drawable/sample"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/divider4" />
 
-        <TextView
-            android:id="@+id/tv_add_photo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="사진 추가하기"
-            style="@style/LargeText"
-            app:layout_constraintStart_toEndOf="@id/iv_camera"
-            app:layout_constraintEnd_toEndOf="@id/s2"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
-        <Space
-            android:id="@+id/s2"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            app:layout_constraintStart_toEndOf="@id/tv_add_photo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
-
-        <ImageView
-            android:id="@+id/iv_photo"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/padding_medium"
-            android:scaleType="centerInside"
-            android:adjustViewBounds="true"
-            android:src="@drawable/sample"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            android:visibility="gone"/>
-
-        <ImageView
-            android:id="@+id/iv_cancel2"
-            android:layout_width="@dimen/icon_mini"
-            android:layout_height="@dimen/icon_mini"
-            android:src="@drawable/baseline_cancel_red"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:visibility="gone"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/iv_cancel2"
+        android:layout_width="@dimen/icon_mini"
+        android:layout_height="@dimen/icon_mini"
+        android:src="@drawable/baseline_cancel_red"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/divider4" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
